<resources>

    <string name="app_name">Athletify</string>
    <string name="allenamento">Allenamento</string>
    <string name="esercizi">Esercizi</string>
    <string name="alimentazione">Alimentazione</string>
    <string name="statistiche">Statistiche</string>
    <string name="trova_esercizi">Trova esercizi</string>
    <string name="gifurl">gifUrl</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="register">Registrati</string>
    <string name="welcome">"Welcome !"</string>
    <string name="registrazione">Registrazione</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_failed">Registrazione fallita</string>
    <string name="allenamenti">Seleziona un livello di allenamento</string>
    <string name="scheda_intermedio_entry">intermedio: Push-Pull-Legs</string>
    <string name="scheda_intermedio">intermedio: Upper-Lower Body</string>
    <string name="scheda_avanzato">avanzato: Full-Body</string>
    <string name="impostazioni">impostazioni</string>
    <string name="prompt_altezza">Altezza in cm</string>
    <string name="prompt_peso">Peso in kg</string>
    <string name="prompt_eta">Età</string>
    <string name="prompt_genere">Genere</string>
    <string name="prompt_circonferenza_collo">Circonferenza collo in cm</string>
    <string name="prompt_circonferenza_vita">Circonferenza vita in cm</string>
    <string name="prompt_circonferenza_fianchi">Circonferenza fianchi in cm</string>
    <string name="prompt_livello_attivita">Livello attività</string>
    <string name="label">label</string>
    <string name="action_search">Cerca</string>
    <string name="salva_dati">Salva dati</string>
    <string name="scrivi_qualcosa">Scrivi qualcosa</string>
    <string name="proteine">Proteine:</string>
    <string name="carboidrati">Carboidrati:</string>
    <string name="grassi">Grassi:</string>
    <string name="i_nostri_consigli">I nostri consigli</string>
    <string name="mantenimento">Mantenimento</string>
    <string name="definizione">Definizione</string>
    <string name="massa">Massa</string>
    <string name="calorie">Calorie:</string>
    <string name="grammi">g</string>
    <string name="kcal">kcal</string>
    <string name="carboidratiNome">Carboidrati</string>
    <string name="riso_basmati">Riso Basmati</string>
    <string name="riso_venere">Riso Venere</string>
    <string name="riso_rosso">Riso Rosso</string>
    <string name="gallette_mais_riso">Gallette Mais/Riso</string>
    <string name="cous_cous">Cous Cous</string>
    <string name="patate_dolci_americane">Patate Dolci/Americane</string>
    <string name="pasta">Pasta</string>
    <string name="farro">Farro</string>
    <string name="friselle">Friselle</string>
    <string name="gnocchi_di_patate_zucca">Gnocchi di Patate/Zucca</string>
    <string name="quinoa">Quinoa</string>
    <string name="orzo">Orzo</string>
    <string name="polenta">Polenta</string>
    <string name="piadina_tortilla">Piadina/Tortilla</string>
    <string name="miglio">Miglio</string>
    <string name="titoloActivitySelezionaAllenamento">Seleziona un giorno</string>
    <string name="titoloActivitySchedaAllenamento">Scheda di allenamento</string>
    <string name="titoloActivitySelezionaGiornoAllenamento">Seleziona un giorno</string>
    <string name="titoloActivitySuggerimento">Suggerimenti nutrizionali</string>
    <string name="exercise">Exercise:</string>
    <string name="set">Set:</string>
    <string name="rep">Rep:</string>
    <string name="rpe">Rpe/%:</string>
    <string name="consigli">Consigli</string>
    <string name="proteine_animali">Proteine Animali</string>
    <string name="proteineTitolo">Proteine</string>
    <string name="pollame">Pollame:</string>
    <string name="pollo">Petto di Pollo</string>
    <string name="petto_fesa_di_tacchino">Petto/Fesa di Tacchino</string>
    <string name="carne">Carne:</string>
    <string name="vitello">Vitello</string>
    <string name="carpaccio_di_manzo">Carpaccio di Manzo</string>
    <string name="cavallo">Cavallo</string>
    <string name="roast_beef">Roast Beef</string>
    <string name="pesce">Pesce:</string>
    <string name="merluzzo">Merluzzo</string>
    <string name="platessa">Platessa</string>
    <string name="nasello">Nasello</string>
    <string name="salmone_fresco_affumicato">Salmone Fresco/Affumicato</string>
    <string name="gamberetti">Gamberetti</string>
    <string name="tonno_fresco_al_naturale">Tonno Fresco/Al Naturale</string>
    <string name="vegetariano">Vegetariano:</string>
    <string name="lenticchie">Lenticchie</string>
    <string name="ceci">Ceci</string>
    <string name="fagioli">Fagioli</string>
    <string name="vegano">Vegano:</string>
    <string name="seitan">Seitan</string>
    <string name="tofu">Tofu</string>
    <string name="tempeh">Tempeh</string>
    <string name="le_tue_misurazioni">Le tue Misurazioni</string>
    <string name="tdee">TDEE</string>
    <string name="bmi">BMI</string>
    <string name="lbm">LBM</string>
    <string name="bfp">BFP</string>
    <string name="descrizione">Descrizione:</string>
    <string name="descrizioneTesto">L\'indice di massa corporea è un dato biometrico, espresso come rapporto tra peso e quadrato dell\'altezza di un individuo ed è utilizzato come un indicatore dello stato di peso forma</string>
    <string name="la_tua_misurazione">La tua Misurazione:</string>
    <string name="descrizioneMassaGrassa">La massa grassa rappresenta la totalità dei lipidi presenti nel corpo umano, si costituisce di due componenti: il grasso primario ed il grasso di deposito.</string>
    <string name="percento">%</string>
    <string name="kg">kg</string>
    <string name="LBMDescrizione">La massa magra o LBM rappresenta tutto ciò che resta dell\'organismo dopo averlo privato del grasso di deposito</string>
    <string name="tdeeDesc">Il TDEE o Total Daily Energy Expenditure, rappresenta il dispendio energetico giornaliero totale, un dato che indica quante calorie al giorno il nostro corpo consuma</string>
    <string name="definiDef">La dieta per la Definizione è un regime alimentare che prevede un apporto calorico quotidiano inferiore a quello richiesto dall\'organismo nell\'arco della giornata, allo scopo di ridurre la massa grassa.</string>
    <string name="defMassa">La dieta per la Massa è un regime alimentare che si prefigge l\'obbiettivo di aumentare l\'apporto di tutti i nutrienti con l\'alimentazione, allo scopo di favorire un eventuale incremento ponderale del peso fisiologico desiderabile</string>
    <string name="defMant">La dieta per il Mantenimento è un regime alimentare che serve a mantenere costante il giusto peso corporeo e a conservare l\'equilibrio tra la massa priva di grasso (LBM) e quella grassa.</string>
    <string name="livello_principiante">Livello Principiante</string>
    <string name="push_pull_legs_workout">PUSH-PULL-LEGS WORKOUT</string>
    <string name="le_tue_schede_di_allenamento">Le Tue Schede Di Allenamento</string>
    <string name="i_tuoi_piani_alimentari">I tuoi Piani Alimentari</string>
    <string name="livello_intermedio">Livello Intermedio</string>
    <string name="upper_lower_workout">UPPER-LOWER WORKOUT</string>
    <string name="livello_avanzato">Livello Avanzato</string>
    <string name="full_body_workout">FULL-BODY WORKOUT</string>
    <string name="sfondo">sfondo</string>
    <string name="logo">logo</string>
    <string name="iconacarboidrati">iconaCarboidrati</string>
    <string name="iconaproteine">iconaProteine</string>
    <string name="iconapollame">iconaPollame</string>
    <string name="iconacarne">iconaCarne</string>
    <string name="iconapesce">iconaPesce</string>
    <string name="iconaveg">iconaVeg</string>
    <string name="iconacalorie">iconaCalorie</string>
    <string name="iconagrassi">iconaGrassi</string>
    <string name="iconapanca">iconaPanca</string>
    <string name="iconastacco">iconaStacco</string>
    <string name="iconapull">iconaPull</string>
    <string name="iconaemail">iconaEmail</string>
    <string name="iconapassword">iconaPassword</string>

</resources>